objects/MaritzCX__Sample_Management_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting stores all the configurations related to Sample Management module.</description>
    <fields>
        <fullName>MaritzCX__API_Frequency__c</fullName>
        <defaultValue>60</defaultValue>
        <description>This field stores the time interval between two successive MaritzCX real-time API call for a Survey in seconds.</description>
        <inlineHelpText>This field specifies the minimum time interval between two successive Invitation API calls for a Survey.</inlineHelpText>
        <label>Min Interval Between API Calls (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Disable_Sending_Invitations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used to stop Sample Management operations.</description>
        <inlineHelpText>This flag is used to stop Sample Management operations.</inlineHelpText>
        <label>Disable Sending Invitations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Number_Of_Recipients__c</fullName>
        <defaultValue>500</defaultValue>
        <description>This stored the maximum number of recipients that can be sent over to MaritzCX Sample Management API in a single API call.</description>
        <label>Number Of Recipients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Retry_Limit__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Retry Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Sample_Error_Handling_Rule__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This field determines behavior of Error Handling while sending Survey Invitations. 
Supported Values: 0 and 1.</description>
        <inlineHelpText>This field determines behavior of error handling while sending survey invitations.
0 - Import recipient with valid prepopulation data, discards only invalid prepop data
1 [Recommended] – Imports recipient without any error, rejects in case of any error</inlineHelpText>
        <label>Sample Error Handling Rule</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Service_Endpoint__c</fullName>
        <defaultValue>&apos;sampleapi.allegiancetech.com&apos;</defaultValue>
        <description>This field stores the endpoint for calling Sample Management APIs.</description>
        <label>Service Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>6. Sample Management Settings</label>
</CustomObject>